# solar-calculator-api

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
calculator_api/: models.py  serializers.py  urls.py  views.py
calculator_api/migrations/: 0001_initial.py
config/: settings.py  urls.py
examples/: example_usage.py
src/solar_layout/: __init__.py  grouping.py  joint_calculator.py  models.py  mount_calculator.py  rafter_generator.py  service.py  validators.py
tests/: test_joint_calculator.py  test_mount_calculator.py  test_rafter_generator.py  test_service.py  test_validators.py
