[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "solar-calculator"
version = "0.1.0"
description = "Solar panel layout calculator with Django REST API"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2,<6.0",
    "djangorestframework>=3.15,<4.0",
    "psycopg2-binary>=2.9",
    "drf-spectacular>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "ruff>=0.5,<0.6",
]

[tool.setuptools.packages.find]
where = ["src"]